fix footer text align

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,10 +16,10 @@ p {
   font-size:21px;
   color:gray;
 }
-p, #footer {
+.footer {
   text-align: right;
 }
-#comingsoon {
+.comingsoon {
   color: aquamarine;
   font-size: 16px;
 }
